third_party/move/move-compiler-v2/tests/checking/typing/lambda.exp

Diagnostics:
error: `M::reduce` is a function and not a macro
   ┌─ tests/checking/typing/lambda.move:34:37
   │
34 │         foreach(&v, |e| sum = sum + reduce!(*e, 0, |t, r| t + r));
   │                                     ^^^^^^

error: invalid call of `+`: expected `integer` but found `&integer` for argument 2
   ┌─ tests/checking/typing/lambda.move:67:37
   │
67 │         foreach(&v, |e| sum = sum + e) // expected to cannot infer type
   │                                     ^

error: expected `()` but found `integer`
   ┌─ tests/checking/typing/lambda.move:73:44
   │
73 │         foreach(&v, |e| { sum = sum + *e; *e }) // expected to have wrong result type of lambda
   │                                            ^

error: expected `(&T, u64)` but found `&T`
   ┌─ tests/checking/typing/lambda.move:40:13
   │
40 │             action(XVector::borrow(v, i), i); // expected to have wrong argument count
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `u64` but found `&T`
   ┌─ tests/checking/typing/lambda.move:48:13
   │
48 │             action(i); // expected to have wrong argument type
   │             ^^^^^^^^^

error: expected `|integer|()` but found `u64`
   ┌─ tests/checking/typing/lambda.move:61:9
   │
61 │         x(1) // expected to be not a function
   │         ^^^^

error: invalid call of `+`: expected `u64` but found `()` for argument 2
   ┌─ tests/checking/typing/lambda.move:56:21
   │
56 │             i = i + action(XVector::borrow(v, i)); // expected to have wrong result type
   │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
